--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+  <img src="" alt="Me"/>
+  <h1></h1>
+  <a href="https://www.linkedin.com/in/vijay-vijay-b19521246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_apphttps://www.linkedin.com/in/vijay-vijay-b19521246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_apphttps://www.linkedin.com/in/vijay-vijay-b19521246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_apphttps://www.linkedin.com/in/vijay-vijay-b19521246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+  <section id="skills">
+	  <ol>
+	    <li>Java</li>
+		<li>HTML</li>
+	    <li>CSS</li>
+		<li>Bootstrap</li>
+	  </ol>
+  </section>
+  <section id="projects">
+	<ul>
+		<li>
+		 Blinkit Clone	
+		</li>
+		<li>
+		 My-College Clone
+		</li>
+	</ul>	 
+  </section>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
