--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
   <img src="" alt="Me"/>
-  <h1></h1>
+  <h1>S Vijay</h1>
   <a href="https://www.linkedin.com/in/vijay-vijay-b19521246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_apphttps://www.linkedin.com/in/vijay-vijay-b19521246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_apphttps://www.linkedin.com/in/vijay-vijay-b19521246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_apphttps://www.linkedin.com/in/vijay-vijay-b19521246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"></a>
   <section id="skills">
 	  <ol>
